# atomap

./: .gitlab-ci.yml  README.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: docs.yml  docs_dev.yml  lint.yml  package_and_test.yml  tests.yml
atomap/: api.py  atom_finding_refining.py  atom_lattice.py  atom_plane.py  atom_position.py  convert_ase.py  dummy_data.py  io.py  plotting.py  quantification.py  sublattice.py  testing_tools.py  tools.py
atomap/example_data/: example_detector_image.hspy  simulated_nanoparticle.hspy
atomap/tests/: test_adf_abf_sto.py  test_ase_import.py  test_atom_finding_refining.py  test_atom_lattice.py  test_atom_plane.py  test_atom_position.py  test_dummy_data.py  test_gui_function_qt.py  test_initial_position_finding.py  test_io.py  test_main.py  test_plotting.py  test_quantification.py  test_sublattice.py  test_testing_tools.py  test_tools.py
conda/: meta.yaml
doc/: automation.rst  conf.py  conftest.py  contribute.rst  development_guide.rst  dumbbell_lattice.rst  examples.rst  finding_atom_lattices.rst  gui_functions.rst  index.rst  install.rst  make_all_documentation_images.sh  make_testdata.rst  quantification.rst  several_phases.rst  start_atomap.rst  working_with_atomic_models.rst
doc/images/: 001_finding_atom_lattices_images_sc.py  002_finding_atom_lattices_images_2sub.py  003_make_fantasite.py  004_analyse_fantasite.py  make_atom_adder_remover_figures.py  make_nice_figures_generate_data.py  make_nice_figures_plotting.py  make_quant_images.py  make_various_tools_figures.py  quantification_with_integration.py  (+1 more)
(+2 files in other folders)
