[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atomap"
version = "0.4.3.dev1"
authors = [
  {name = "Magnus Nord", email = "magnunor@gmail.com"},
]
dependencies = [
    "scipy>=1.4.0",
    "numpy>=1.13",
    "h5py",
    "matplotlib>=3.1.0",
    "scikit-learn",
    "scikit-image>=0.17.1",
    "hyperspy>=2.0.0",
    "ase>=3.17.0",
    "numba",
    "exspy",
]
description = "Library for analysing atomic resolution images"
readme = "README.md"
keywords = [
    "STEM",
    "data analysis",
    "microscopy",
    "transmission electron microscopy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["atomap*"]
where = ["."]

[tool.setuptools.package-data]
"atomap.example_data" = ["*.hspy"]
"atomap.tests.datasets" = ["*.hdf5"]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
tests = [
  "pytest",
]

[project.urls]
Homepage = "https://atomap.org/"
Documentation = "https://atomap.org/finding_atom_lattices.html"
Repository = "https://github.com/atomap-dev/atomap"
Issues = "https://github.com/atomap-dev/atomap/issues"
